--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ numpy
 pandas
 plotly.express
 streamlit_option_menu
+matplotlib
+vif
+seaborn
+streamlit.components.v1
+statsmodels.stats.outliers_influence
